--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -1,7 +1,7 @@
 Time ms = second/1000;
 Time hdot = 44*ms/630000;  // 14.318MHz
 
-Intel8088 cpu;
+Intel8088CPU cpu;
 cpu.frequency = 1/(3*hdot);  // 4.77MHz
 
 ISA8BitBus bus; bus.cpu = cpu.bus;
@@ -18,12 +18,13 @@ ram.bytes = 640*1024;  // 640kB should be enough for anyone.
 ram.decayTime = (4*ms / 256) << ram.rowBits;
 bus.slot = ram.bus;
 
-NMISwitch nmiSwitch;               bus.slot = nmiSwitch.bus;
-DMAPageRegisters dmaPageRegisters; bus.slot = dmaPageRegisters.bus;
-Intel8259PIC pic;                  bus.slot = pic.bus;
-Intel8237DMA dmac;                 bus.slot = dmac.bus;
-Intel8255PPI ppi;                  bus.slot = ppi.bus;
-Intel8253PIT pit;                  bus.slot = pit.bus;
+Intel8237DMA dmac;                 bus.chip0 = dmac.bus;
+Intel8259PIC pic;                  bus.chip1 = pic.bus;
+Intel8253PIT pit;                  bus.chip2 = pit.bus;
+Intel8255PPI ppi;                  bus.chip3 = ppi.bus;
+DMAPageRegisters dmaPageRegisters; bus.chip4 = dmaPageRegisters.bus;
+NMISwitch nmiSwitch;               bus.chip5 = nmiSwitch.bus;
+
 pit.frequency = cpu.frequency/4;  // 1.193MHz
 
 PCXTKeyboardPort keyboardPort;
