--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -4,7 +4,7 @@ Time hdot = 44*ms/630000;  // 14.318MHz
 Intel8088CPU cpu;
 cpu.frequency = 1/(3*hdot);  // 4.77MHz
 
-ISA8BitBus bus; bus.cpu = cpu.bus;
+ISA8BitBus bus; bus.cpu = cpu;
 
 RAM ram;
 // ram.rowBits is 7 for 4116 RAM chips
@@ -18,7 +18,7 @@ ram.bytes = 640*1024;  // 640kB should be enough for anyone.
 ram.decayTime = (4*ms / 256) << ram.rowBits;
 bus.slot = ram.bus;
 
-Intel8237DMA dmac;                 bus.chip0 = dmac.bus;
+Intel8237DMAC dmac;                bus.chip0 = dmac.bus;
 Intel8259PIC pic;                  bus.chip1 = pic.bus;
 Intel8253PIT pit;                  bus.chip2 = pit.bus;
 Intel8255PPI ppi;                  bus.chip3 = ppi.bus;
