--- a/berapa/ibmpcxt.config
+++ b/berapa/ibmpcxt.config
@@ -6,14 +6,16 @@ cpu.frequency = 1/(3*hdot);  // 4.77MHz
 
 ISA8BitBus bus; bus.cpu = cpu;
 
-RAM ram;
+Int kB = 2^10;
+
+ISA8BitRAM ram;
 // ram.rowBits is 7 for 4116 RAM chips
 //                8 for 4164
 //                9 for 41256
 // We use 9 here because programs written for rowBits == N will work
 // for rowBits < N but not necessarily rowBits > N.
 ram.rowBits = 9;
-ram.bytes = 640*1024;  // 640kB should be enough for anyone.
+ram.bytes = 640*kB;  // should be enough for anyone.
 // Real hardware can work with a decay time as short as hdot*12*18<<ram.rowBits
 ram.decayTime = (4*ms / 256) << ram.rowBits;
 bus.slot = ram.bus;
@@ -41,7 +43,7 @@ cga.rom = "../../external/8088/roms/5788005.u33";
 
 RAM cgaRam;
 cgaRam.rowBits = 7;
-cgaRam.bytes = 0x4000;
+cgaRam.bytes = 16*kB;
 cgaRam.decayTime = 2*ms;
 cga.ram = cgaRam.bus;
 
