--- a/crc32/crc32.vcxproj.filters
+++ b/crc32/crc32.vcxproj.filters
@@ -63,4 +63,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\include\alfe.natvis" />
+  </ItemGroup>
 </Project>
